# hiviewdfx_hisysevent

./: Cargo.toml  OAT.xml  bundle.json  ohos.build
adapter/native/idl/: BUILD.gn
adapter/native/idl/include/: file_util.h  hisysevent_delegate.h  hisysevent_listener_proxy.h  hisysevent_query_proxy.h  isys_event_service.h  parcelable_vector_rw.h  query_sys_event_callback_proxy.h  ret_code.h  string_convertor.h  sys_event_callback_stub.h  sys_event_query_rule.h  sys_event_rule.h  sys_event_service_proxy.h  sys_event_service_stub.h
adapter/native/idl/src/: ash_mem_utils.cpp  file_util.cpp  hisysevent_delegate.cpp  hisysevent_listener_proxy.cpp  hisysevent_query_proxy.cpp  query_sys_event_callback_proxy.cpp  query_sys_event_callback_stub.cpp  sys_event_callback_stub.cpp  sys_event_query_rule.cpp  sys_event_rule.cpp  sys_event_service_proxy.cpp  sys_event_service_stub.cpp
frameworks/config/hiviewdfx/: hisysevent.yaml
frameworks/native/: BUILD.gn  flat_json_parser.cpp  hisysevent_json_decorator.cpp  hisysevent_tool.cpp  hisysevent_tool_listener.cpp  hisysevent_tool_query.cpp  json_flatten_parser.cpp  main.cpp
frameworks/native/c_wrapper/: BUILD.gn
frameworks/native/c_wrapper/include/: hisysevent_c_wrapper.h
frameworks/native/c_wrapper/source/: hisysevent_c_wrapper.cpp  hisysevent_rust_listener.cpp  hisysevent_rust_manager.cpp  hisysevent_rust_querier.cpp
frameworks/native/include/: flat_json_parser.h  hisysevent_json_decorator.h  hisysevent_tool.h  hisysevent_tool_listener.h  hisysevent_tool_query.h  json_flatten_parser.h
frameworks/native/test/unittest/common/: BUILD.gn  hisysevent_c_wrapper_test.cpp  hisysevent_tool_unit_test.cpp
frameworks/native/util/: BUILD.gn  string_util.cpp
frameworks/native/util/include/: string_util.h
interfaces/: bundle.json
interfaces/ani/: BUILD.gn
interfaces/ani/ets/: @ohos.hiSysEvent.ets  BUILD.gn  arktsconfig.json  hisysevent_ani.cpp  hisysevent_ani.h
interfaces/ets/ani/: BUILD.gn
interfaces/ets/ani/hisysevent/: BUILD.gn
interfaces/ets/ani/hisysevent/ets/: @ohos.hiSysEvent.ets
interfaces/ets/ani/hisysevent/include/: ani_callback_context.h  ani_callback_manager.h  ani_hisysevent_listener.h  ani_hisysevent_querier.h  hisysevent_ani.h  hisysevent_ani_util.h  ret_def.h
interfaces/ets/ani/hisysevent/src/: ani_callback_manager.cpp  ani_hisysevent_listener.cpp  ani_hisysevent_querier.cpp  hisysevent_ani.cpp  hisysevent_ani_util.cpp
interfaces/js/kits/napi/: BUILD.gn
interfaces/js/kits/napi/include/: js_callback_manager.h  napi_callback_context.h  napi_hisysevent_adapter.h  napi_hisysevent_listener.h  napi_hisysevent_querier.h  napi_hisysevent_util.h  ret_def.h
interfaces/js/kits/napi/src/: js_callback_manager.cpp  napi_hisysevent_adapter.cpp  napi_hisysevent_js.cpp  napi_hisysevent_listener.cpp  napi_hisysevent_querier.cpp  napi_hisysevent_util.cpp
interfaces/native/innerkits/: BUILD.gn  hisysevent.cpp
interfaces/native/innerkits/hisysevent/: BUILD.gn  encoded_param.cpp  event_socket_factory.cpp  hisysevent.cpp  hisysevent_c.cpp  inner_writer.cpp  libhisysevent.map  raw_data.cpp  raw_data_encoder.cpp  stringfilter.cpp  transport.cpp  write_controller.cpp
interfaces/native/innerkits/hisysevent/encode/: BUILD.gn  encoded_param.cpp  raw_data.cpp  raw_data_base_def.cpp  raw_data_builder.cpp  raw_data_builder_json_parser.cpp  raw_data_encoder.cpp
interfaces/native/innerkits/hisysevent/encode/include/: encoded_param.h  raw_data.h  raw_data_base_def.h  raw_data_builder.h  raw_data_builder_json_parser.h  raw_data_encoder.h  value_param.h
interfaces/native/innerkits/hisysevent/include/: def.h  encoded_param.h  event_socket_factory.h  hisysevent.h  hisysevent_c.h  inner_writer.h  raw_data.h  raw_data_encoder.h  stringfilter.h  transport.h  write_controller.h
interfaces/native/innerkits/hisysevent_easy/: BUILD.gn  easy_event_builder.c  easy_event_encoder.c  easy_socket_writer.c  easy_util.c  hisysevent_easy.c
interfaces/native/innerkits/hisysevent_easy/include/: easy_def.h  easy_event_builder.h  easy_event_encoder.h  easy_socket_writer.h  easy_util.h  hisysevent_easy.h
interfaces/native/innerkits/hisysevent_manager/: BUILD.gn  hisysevent_base_manager.cpp  hisysevent_listener_c.cpp  hisysevent_manager.cpp  hisysevent_manager_c.cpp  hisysevent_query_callback_c.cpp  hisysevent_record.cpp  hisysevent_record_c.cpp  hisysevent_record_convertor.cpp  hisysevent_subscribe_callback_native.cpp  libhisyseventmanager.map
interfaces/native/innerkits/hisysevent_manager/include/: hisysevent_base_manager.h  hisysevent_base_query_callback.h  hisysevent_listener_c.h  hisysevent_listenning_operate.h  hisysevent_manager.h  hisysevent_manager_c.h  hisysevent_query_callback.h  hisysevent_query_callback_base.h  hisysevent_record.h  hisysevent_record_c.h  hisysevent_rules.h  hisysevent_subscribe_callback.h  hisysevent_subscribe_callback_base.h  hisysevent_subscribe_callback_native.h  hisysevent_subscribe_operate.h  hisysevent_value.h  rule_type.h
interfaces/native/innerkits/include/: hisysevent.h
interfaces/rust/: BUILD.gn
interfaces/rust/innerkits/: BUILD.gn
interfaces/rust/innerkits/src/: lib.rs  macros.rs  sys_event.rs  sys_event_manager.rs  utils.rs
interfaces/rust/src/: lib.rs  macros.rs  sys_event.rs  sys_event_manager.rs  utils.rs
test/: BUILD.gn
test/fuzztest/common/hisysevent_fuzzer/: BUILD.gn  hisysevent_fuzzer.cpp
test/fuzztest/common/hisyseventmanager_fuzzer/: BUILD.gn
test/moduletest/common/: BUILD.gn  hisysevent_adapter_native_test.cpp  hisysevent_c_test.cpp  hisysevent_delay_test.cpp  hisysevent_easy_test.cpp  hisysevent_encoded_test.cpp  hisysevent_manager_c_test.cpp  hisysevent_native_test.cpp  hisysevent_test.cpp  hisysevent_wrote_result_check_test.cpp
test/moduletest/common/include/: hisysevent_easy_test.h
test/unittest/common/napi/: BUILD.gn  config.json  napi_hisysevent.test.js
test/unittest/common/permission/: BUILD.gn  config.json
test/unittest/rust/: BUILD.gn
test/unittest/rust/src/: main.rs
