# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

ohos_shared_library("ani_hisysevent") {
  sources = [ "./hisysevent_ani.cpp" ]

  deps = [
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent:libhisysevent",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:libhisyseventmanager",
  ]

  external_deps = [
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "jsoncpp:jsoncpp",
    "runtime_core:ani",
  ]

  subsystem_name = "hiviewdfx"
  part_name = "hisysevent"
  output_extension = "so"
}

generate_static_abc("hisysevent") {
  base_url = "."
  files = [ "./@ohos.hiSysEvent.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/hisysevent.abc"
}

ohos_prebuilt_etc("hisysevent_abc_etc") {
  source = "$target_out_dir/hisysevent.abc"
  module_install_dir = "framework"
  subsystem_name = "hiviewdfx"
  part_name = "hisysevent"
  deps = [ ":hisysevent" ]
}
