# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("hisysevent_easy_config") {
  visibility = [ "*:*" ]

  include_dirs = [ "include" ]
}

ohos_static_library("libhisysevent_easy") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  configs = [ ":hisysevent_easy_config" ]

  public_configs = [ ":hisysevent_easy_config" ]

  sources = [
    "easy_event_builder.c",
    "easy_event_encoder.c",
    "easy_socket_writer.c",
    "easy_util.c",
    "hisysevent_easy.c",
  ]

  part_name = "hisysevent"

  subsystem_name = "hiviewdfx"
}
