# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("hisysevent_encoded_config") {
  visibility = [ "*:*" ]

  include_dirs = [ "include" ]
}

ohos_source_set("hisysevent_encoded") {
  sources = [
    "encoded_param.cpp",
    "raw_data.cpp",
    "raw_data_base_def.cpp",
    "raw_data_builder.cpp",
    "raw_data_builder_json_parser.cpp",
    "raw_data_encoder.cpp",
  ]

  public_configs = [ ":hisysevent_encoded_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
  ]

  part_name = "hisysevent_native"
  subsystem_name = "hiviewdfx"
}
